--- a/app/src/main/res/layout/game_efficiency.xml
+++ b/app/src/main/res/layout/game_efficiency.xml
@@ -22,28 +22,15 @@
         android:id="@+id/typeDefLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:divider="@drawable/divider_vertical100"
+        android:orientation="horizontal"
+        android:showDividers="middle"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/typeAtq"
-        android:showDividers="middle"
-        android:divider="@drawable/divider_vertical100"
-        >
+        app:layout_constraintTop_toBottomOf="@+id/typeAtq">
 
-        <ImageView
-            android:id="@+id/typeDef1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/typedef"
-            tools:srcCompat="@tools:sample/avatars" />
-
-        <ImageView
-            android:id="@+id/typeDef2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/typedef"
-            tools:srcCompat="@tools:sample/avatars" />
     </LinearLayout>
 
     <androidx.constraintlayout.widget.Guideline
@@ -69,7 +56,6 @@
 
         <Button
             android:id="@+id/efficiency0"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -77,7 +63,6 @@
 
         <Button
             android:id="@+id/efficiency05"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -98,7 +83,6 @@
 
         <Button
             android:id="@+id/efficiency1"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -106,7 +90,6 @@
 
         <Button
             android:id="@+id/efficiency2"
-            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -115,7 +98,6 @@
 
     <Button
         android:id="@+id/efficiency4"
-        style="?android:attr/buttonBarButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/_4x"
