--- a/app/src/main/res/layout/game_efficiency.xml
+++ b/app/src/main/res/layout/game_efficiency.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:screenOrientation="portrait"
+    >
 
 
     <ImageView
@@ -16,7 +18,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:ignore="ImageContrastCheck" />
 
     <LinearLayout
         android:id="@+id/typeDefLayout"
@@ -45,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:divider="@drawable/divider_vertical100"
+        android:divider="@drawable/divider_vertical50"
         android:orientation="horizontal"
         android:showDividers="middle"
         app:layout_constraintBottom_toTopOf="@+id/efficiencyLayout2"
@@ -60,6 +62,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_0x" />
+        <Button
+            android:id="@+id/efficiency025"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/_0_25x" />
 
         <Button
             android:id="@+id/efficiency05"
