--- a/app/src/main/res/layout/game_efficiency.xml
+++ b/app/src/main/res/layout/game_efficiency.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:screenOrientation="portrait"
+    android:configChanges="orientation|keyboardHidden"
     >
 
 
@@ -40,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="365dp" />
+        app:layout_constraintGuide_percent="0.5" />
 
     <LinearLayout
         android:id="@+id/efficiencyLayout"
